xtask/src/snapshots/xtask__tests__update_cargo_toml_from_release.snap
---
source: src/main.rs
expression: doc
---
[package]
name = "matrix-sdk-crypto-wasm"

[dependencies]
anyhow = "1.0.68"
matrix-sdk-common = { features = ["js"] , git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-indexeddb = { default-features = false, features = ["e2e-encryption"] , git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-qrcode = { optional = true , git = "https://github.com/matrix-org/matrix-rust-sdk" }
wasm-bindgen-test = "0.3.37"

[build-dependencies]
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[dependencies.matrix-sdk-crypto]
default-features = false
features = ["js", "automatic-room-key-forwarding"]
git = "https://github.com/matrix-org/matrix-rust-sdk"
